deploy: 3ee6f3146e0d1c0fd6fd3530a4e247b464eab267

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/me/me.jpeg" />
-    <link rel="apple-touch-icon" href="/me/apple-touch-icon.png" />
-    <link rel="manifest" href="/me/manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="/me.jpeg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harrisonhcue 👋</title>
-    <script type="module" crossorigin src="/me/assets/index.a971457e.js"></script>
-    <link rel="stylesheet" href="/me/assets/index.5084d666.css">
+    <script type="module" crossorigin src="/assets/index.a971457e.js"></script>
+    <link rel="stylesheet" href="/assets/index.5084d666.css">
   </head>
   <body>
     <div id="root"></div>
